@@ -1,0 +1,10 @@
+ASSEMBLY = @EXTENSION_NAME@
+TARGET = library
+LINK = $(REF_FIXME)
+
+SOURCES =
+
+RESOURCES =
+
+include $(top_srcdir)/build/build.mk
+
