@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Addin 
+    id="@EXTENSION_NAME@"
+    version="1.0"
+    compatVersion="1.0"
+    copyright="© 2008 Novell Inc. Licensed under the MIT X11 license."
+    name=""
+    category=""
+    description=""
+    author=""
+    url="http://banshee-project.org/"
+    defaultEnabled="true">
+
+@EXTENSION_DEPS@
+
+@EXTENSION_NODES@</Addin>
